--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ol>
         </section>
         <aside><h2>About Me</h2>
-        <img src="images/abdalrhman-small.jpg" width="200" height="200" alt="Abdalrhman">
+        <img src="images/abdalrhman.png" width="200" height="200" alt="Abdalrhman">
         <p>I am a passionate beginner in both web and game development. I have started learning C and C++ to build a strong foundation in programming, and I’ve already created a simple 2D game using the Godot engine. On the web development side, I’m learning HTML, CSS, and JavaScript to design and build interactive web pages. I enjoy exploring creative ideas and turning them into digital experiences, and I’m always eager to learn new technologies and improve my skills.
 </p>
         </aside>
